@@ -68,9 +68,6 @@
                     { "name": "gtk-linux-slave-10", "platform": "gtk" },
                     { "name": "gtk-linux-slave-11", "platform": "gtk" },
 
-                    { "name": "jsconly-linux-szeged-slave-1", "platform": "jsc-only" },
-                    { "name": "jsconly-linux-szeged-slave-2", "platform": "jsc-only" },
-                    { "name": "jsconly-linux-szeged-slave-3", "platform": "jsc-only" },
                     { "name": "jsconly-linux-igalia-bot-1", "platform": "jsc-only" },
 
                     { "name": "wpe-linux-bot-1", "platform": "wpe" },
@@ -292,24 +289,6 @@
                       "slavenames": ["wincairo-1", "wincairo-2"]
                     },
                     {
-                      "name": "JSCOnly Linux AArch64 Release", "type": "BuildAndRemoteJSCTests", "builddir": "jsconly-linux-aarch64-release",
-                      "platform": "jsc-only", "configuration": "release", "architectures": ["aarch64"],
-                      "SVNMirror": "svn://webkit.inf.u-szeged.hu/webkit/",
-                      "slavenames": ["jsconly-linux-szeged-slave-1"]
-                    },
-                    {
-                      "name": "JSCOnly Linux ARMv7 Thumb2 Release", "type": "BuildAndRemoteJSCTests", "builddir": "jsconly-linux-armv7-thumb2-release",
-                      "platform": "jsc-only", "configuration": "release", "architectures": ["armv7"],
-                      "SVNMirror": "svn://webkit.inf.u-szeged.hu/webkit/",
-                      "slavenames": ["jsconly-linux-szeged-slave-2"]
-                    },
-                    {
-                      "name": "JSCOnly Linux ARMv7 Traditional Release", "type": "BuildAndRemoteJSCTests", "builddir": "jsconly-linux-armv7-traditional-release",
-                      "platform": "jsc-only", "configuration": "release", "architectures": ["armv7"],
-                      "SVNMirror": "svn://webkit.inf.u-szeged.hu/webkit/",
-                      "slavenames": ["jsconly-linux-szeged-slave-3"]
-                    },
-                    {
                       "name": "JSCOnly Linux MIPS32el Release", "type": "BuildAndRemoteJSCTests", "builddir": "jsconly-linux-mips32el-release",
                       "platform": "jsc-only", "configuration": "release", "architectures": ["mips"],
                       "slavenames": ["jsconly-linux-igalia-bot-1"]
@@ -330,7 +309,6 @@
     "schedulers": [ { "type": "AnyBranchScheduler", "name": "trunk", "change_filter": "trunk_filter", "treeStableTimer": 45.0,
                       "builderNames": ["GTK Linux 32-bit Release", "GTK Linux 64-bit Release (Build)", "GTK Linux 64-bit Debug (Build)", "GTK Linux ARM Release",
                                        "GTK Linux 64-bit Release Debian Stable (Build)", "GTK Linux 64-bit Release Ubuntu LTS (Build)",
-                                       "JSCOnly Linux AArch64 Release", "JSCOnly Linux ARMv7 Thumb2 Release", "JSCOnly Linux ARMv7 Traditional Release",
                                        "JSCOnly Linux MIPS32el Release", "WinCairo 64-Bit Release", "WPE Linux 64-bit Release (Build)"]
                     },
                     { "type": "PlatformSpecificScheduler", "platform": "mac-highsierra", "branch": "trunk", "treeStableTimer": 45.0,
