@@ -1,3 +1,13 @@
+2018-02-02  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Remove ARM JSCOnly bots from buildbot waterfall
+        https://bugs.webkit.org/show_bug.cgi?id=182398
+
+        Reviewed by Alexey Proskuryakov.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+        * BuildSlaveSupport/build.webkit.org-config/steps_unittest.py:
+
 2018-02-02  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Unreviewed. Try to avoid webdriver tests step timing out in the bots.
